# websqz

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml  rust.yml
example/: index.js
src/: coder.rs  compress_config.rs  compressor.rs  macho.rs  main.rs  model.rs  model_finder.rs  output_generator.rs  report.rs  stats.rs  web.rs
src/compressor/: compress_config.rs  encoder.rs  model.rs  model_finder.rs  utils.rs
src/js_source/: coder.js  norder_byte.js
src/macho/: assembly.rs  build.rs  fixups.rs  model.rs  pack.rs  parser.rs  payload.rs  tests.rs
src/macho/stubs/: bootstrap.s  decoder.s  diagnostic_runtime.c  norder_byte.s  tiny_runtime.c
src/macho/template/: bootstrap.s  decoder.s  diagnostic_runtime.c  ln_mixer.s  model_support.s  norder_byte.s  tiny_runtime.c  word.s
src/templates/web/: boot.js
src/web/: output_generator.rs
src/web/js_source/: hash_map.js  mixer.js  norder_byte.js  utils.js
src/web/templates/node/: index.mjs
src/web/templates/web/: boot.js
tests/macho/: Makefile  helloworld
tests/ray_tracer/: index.html  index.js
webcompressor/: .gitignore  Cargo.toml  compress.json  test_data.txt  test_data.txt.br
webcompressor/src/: bwt.rs  coder.rs  compress_config.rs  compressor.rs  float.rs  js_code_generator.rs  main.rs  model.rs  model_finder.rs  output_generator.rs  stats.rs  utils.rs
webcompressor/src/js_source/: coder.js  hash_map.js  mixer.js  norder_byte.js  utils.js
webcompressor/src/templates/node/: index.mjs
webcompressor/src/templates/web/: boot.js  (+1 more)
webcompressor/tests/ray_tracer/: index.js.br
