[package]
name = "websqz"
authors = ["Emil Sandstø"]
description = "WebSQZ is a tool for compressing and decompressing demo intros for web."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
bytes = "1.10.1"
clap = { version="4.5.41", features = ["derive"] }
flate2 = "1.1.2"
handlebars = "6.3.2"
serde = { version="1.0.219", features=["derive"] }
serde_json = "1.0.140"
