[package]
name = "websqz"
authors = ["Emil Sandstø"]
description = "Websqz is a tool for compressing and decompressing demo intros for web."
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
bytes = "1.11.0"
clap = { version="4.5.54", features = ["derive"] }
flate2 = "1.1.8"
handlebars = "6.4.0"
human-panic = "2.0.6"
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version="0.3.22", features = ["fmt", "env-filter"] }
